ISSITES-5761 fix text alignment in dropdown

--- a/modules/apps/site-initializer/site-initializer-liferay-learn/src/main/resources/site-initializer/fragments/group/public-sites-navigation/fragments/public-sites-navigation/index.scss
+++ b/modules/apps/site-initializer/site-initializer-liferay-learn/src/main/resources/site-initializer/fragments/group/public-sites-navigation/fragments/public-sites-navigation/index.scss
@@ -125,6 +125,8 @@ nav.public-sites-navigation {
 				left: -1.5rem;
 				margin-top: 2.25rem;
 				position: absolute;
+				text-align: -webkit-left;
+				text-align: left;
 				width: 15rem;
 				z-index: 10;
 			}
